搭建个人网址(2)——服务器环境搭建

--- a/服务器搭建/搭建个人网址(1)——连接服务器.md
+++ b/服务器搭建/搭建个人网址(1)——连接服务器.md
@@ -54,5 +54,5 @@
 
 ---
 ## 小结
-本篇主要介绍了如果购买并连接上服务器。但是目前这服务器还没有任何功能，下篇文章将介绍如果部署一个支持外部的http请求的接口服务。
+本篇主要介绍了如果购买并连接上服务器。但是目前这服务器还没有任何功能，下篇文章将介绍如果部署一个可以访问的项目。
 
