搭建个人网站——优化文章细节，新增一些数据库的异常处理

--- a/服务器搭建/搭建个人网址(1)——连接服务器.md
+++ b/服务器搭建/搭建个人网址(1)——连接服务器.md
@@ -18,13 +18,31 @@
 - 基础配置
 
   选择自定义配置，选择最低配一个月（主要是便宜）。
+
+
   ![avatar](pic/购买服务器1.png)
 - 网络和安全组配置
 
   带宽计费模式选用按流量付费（主要是便宜），其他配置不用修改
+
+
 ![avatar](pic/购买服务器2.png)
-最终的确认界面，确认没问题后下单付款即可
+
+- 确认界面
+确认没问题后下单付款即可
+
+
 ![avatar](pic/购买服务器3.png)
+
+- 省钱小tip
+  1. 地域选华北6（乌兰察布）会便宜点
+  2. 实例的分类在共享型中选突发性能型，便宜点
+  3. 系统盘选高效云盘，20G，便宜点
+  4. 网络的带宽计费模式用按使用流量，简单测试流量一般较少，更便宜
+  5. 购买时长一周够用点话就选一周，便宜点
+
+以上小tip，不差钱的可忽略
+
 
 ## 二、重置密码
 购买成功后，就可以进入到这个界面，这里说的实例，就是我们所说的服务器
